# CppProjectTemplate

./: .gitignore  CMakeLists.txt  README.md
Intern/Base/: CMakeLists.txt  Number.hpp  Optional.hpp
Intern/Base/Mem/: Memory.hpp
Intern/Base/Traits/: TraitsTools.hpp  TypeTraits.hpp
Intern/Base/UnitTest/: TestOptional.cpp
Intern/Render/: CMakeLists.txt  Context.cpp  Context.h  Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h
Intern/Render/Shader/: shader.frag  shader.vert
Intern/Tools/: array2d.hpp
Source/: main.cpp
cmake/: cmaketools.cmake  options.cmake
include/: Proj.hpp  TypeTraits.hpp
includetmp/Base/: Proj.hpp
includetmp/ExtraFunctions/: CMakeLists.txt
includetmp/Print/: Print.hpp  PrintTools.hpp
includetmp/render/: CMakeLists.txt
intern/: CMakeLists.txt
intern/Base/: CMakeLists.txt  Number.hpp  TypeTraits.hpp
intern/Print/: CMakeLists.txt  PrintTools.hpp  Printable.hpp
intern/extra_functions/: CMakeLists.txt  doc.md  object_counter.hpp  survival_time.hpp
intern/math/: matrix.hpp  matrix_tools.hpp  traits.hpp  vec.hpp
intern/render/: CMakeLists.txt  Utilities.hpp  context.cpp  context.h
intern/tools/: array2d.hpp
source/: main.cpp  test.cpp
